--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -1,14 +1,16 @@
 branding.token=tmcbeans
 cluster.path=\
+    ${nbplatform.active.dir}/apisupport:\
     ${nbplatform.active.dir}/cnd:\
-    ${nbplatform.active.dir}/extide:\
     ${nbplatform.active.dir}/dlight:\
+    ${nbplatform.active.dir}/extide:\
     ${nbplatform.active.dir}/harness:\
     ${nbplatform.active.dir}/ide:\
     ${nbplatform.active.dir}/java:\
     ${nbplatform.active.dir}/javafx:\
     ${nbplatform.active.dir}/nb:\
     ${nbplatform.active.dir}/platform:\
+    ${nbplatform.active.dir}/profiler:\
     ${nbplatform.active.dir}/webcommon:\
     ${nbplatform.active.dir}/websvccommon:\
     mavenmodules
@@ -36,4 +38,4 @@ extcluster.mavenmodules.sources=
 #    org.openide.execution,\
 #    org.openide.options,\
 #    org.openide.util.enumerations
-nbplatform.active=nb81
+nbplatform.active=default
